# concurrent-programming

./: .gitignore  CMakeLists.txt  README.md
01 - Practice with threads/: .gitignore  CMakeLists.txt  README.md
01 - Practice with threads/include/: matrix.h
01 - Practice with threads/output/matrices_results/: C4x4.txt
01 - Practice with threads/output/time_files_concurrent/: 1024x1024_10.txt  1024x1024_2.txt  1024x1024_200.txt  1024x1024_250.txt  1024x1024_3.txt  1024x1024_30.txt  1024x1024_350.txt  1024x1024_5.txt  1024x1024_50.txt  1024x1024_60.txt  1024x1024_70.txt  1024x1024_80.txt  128x128_100.txt  128x128_250.txt  128x128_350.txt  128x128_5.txt  16x16_10.txt  16x16_200.txt  16x16_250.txt  16x16_300.txt  16x16_350.txt  16x16_400.txt  16x16_450.txt  16x16_60.txt  16x16_90.txt  2048x2048_150.txt  2048x2048_250.txt  2048x2048_30.txt  2048x2048_350.txt  2048x2048_40.txt  2048x2048_450.txt  2048x2048_60.txt  2048x2048_80.txt  2048x2048_90.txt  256x256_10.txt  256x256_150.txt  256x256_200.txt  256x256_3.txt  256x256_30.txt  256x256_350.txt  (+60 more)
01 - Practice with threads/output/time_files_sequential/: 1024x1024_1.txt  32x32_1.txt  8x8_1.txt
01 - Practice with threads/src/: matrix.inl  multimat_concorrente.cpp
01 - Practice with threads/statistic-data/: sequential.ods
02 - Synchronization in concurrent programs/: .project  README.md
03 - Concurrent programming in Go/: README.md
03 - Concurrent programming in Go/output/: teste1.txt  (+4 more)
include/: matrix.h
src/: matrix.inl  multimat_concorrente.cpp  multimat_sequencial.cpp
statistic-data/: sequential.ods
(+173 files in other folders)
